# todo-api

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: auth.py  database.py  main.py  settings.py
tests/: main.py
